export const snapshot = {};

snapshot[`Ty 1`] = `
{
  type: [
    "string",
    "number",
    "object",
    "array",
    "boolean",
    "null",
  ],
}
`;

snapshot[`Ty 2`] = `
{
  description: "One.",
  type: [
    "string",
    "number",
    "object",
    "array",
    "boolean",
    "null",
  ],
}
`;

snapshot[`Ty 3`] = `
{
  description: "Two. One.",
  type: [
    "string",
    "number",
    "object",
    "array",
    "boolean",
    "null",
  ],
}
`;
